--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,9 +37,9 @@ semantic_cache = [
     "faiss-cpu==1.10.0",
     "huggingface-hub==0.25.2",  # downgrade to 0.25.2 to avoid breaking changes
 ]
-lmcache = [
-    "lmcache==0.2.1",
-]
+# lmcache = [
+#     "lmcache==0.2.1",
+# ]
 
 [build-system]
 requires = ["setuptools>=68", "setuptools_scm[toml]>=8.0"]
